add simple todo

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       <li><a href="02-video.html">Video playback</a></li>
       <li><a href="03-feedback.html">Feedback form</a></li>
       <li><a href="04-filter.html">Filter</a></li>
+      <li><a href="05-todo.html">Todo</a></li>
     </ul>
   </body>
 </html>
