--- a/src/04-filter.html
+++ b/src/04-filter.html
@@ -9,38 +9,40 @@
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
-<form class="filter-form">
-  <label>
-    Color
-    <select name="color" id="">
-      <option value="red">Red</option>
-      <option value="green">Green</option>
-      <option value="blue">Blue</option>
-      <option value="black">Black</option>
-    </select>
-  </label>
-  <label>
-    Size
-    <select name="size" id="">
-      <option value="sm">Small</option>
-      <option value="md">Middle</option>
-      <option value="xl">Big</option>
-    </select>
-  </label>
-  <label>
-    Material
-    <select name="material" id="">
-      <option value="steel">Steel</option>
-      <option value="glass">Glass</option>
-      <option value="wood">Wood</option>
-      <option value="plastic">Plastic</option>
-    </select>
-  </label>
-  <button type="submit">Done</button>
-  <button type="reset">Reset</button>
-
-</form>
-    
+    <form class="filter-form">
+      <label>
+        Color
+        <select name="color" id="">
+          <option value="red">Red</option>
+          <option value="green">Green</option>
+          <option value="blue">Blue</option>
+          <option value="black">Black</option>
+        </select>
+      </label>
+      <label>
+        Size
+        <select name="size" id="">
+          <option value="sm">Small</option>
+          <option value="md">Middle</option>
+          <option value="xl">Big</option>
+        </select>
+      </label>
+      <label>
+        Material
+        <select name="material" id="">
+          <option value="steel">Steel</option>
+          <option value="glass">Glass</option>
+          <option value="wood">Wood</option>
+          <option value="plastic">Plastic</option>
+        </select>
+      </label>
+      <button type="submit">Done</button>
+      <button type="reset">Reset</button>
+    </form>
+    <p>You order:</p>
+    <p>Color: <span class="color">---</span></p>
+    <p>Size: <span class="size">---</span></p>
+    <p>Material: <span class="material">---</span></p>
     <script src="js/04-filter.js" type="module"></script>
   </body>
 </html>
